整理本地一些命令

--- a/public/fc.html
+++ b/public/fc.html
@@ -16,6 +16,10 @@
     <ul>
         <li>[hosts]</li>
         <li><span class="copyable">thinban@192.168.31.204</span><span class="ml10"></span></li>
+        <li><span class="copyable">http://192.168.31.1#102120zgg</span><span class="ml10">xiaomi</span></li>
+        <li><span class="copyable">https://192.168.31.57:8006#root/thinban</span><span class="ml10">pve</span></li>
+        <li><span class="copyable">http://192.168.31.71:5000#thinban/AAA111aaa</span><span class="ml10">dsm</span></li>
+        <li><span class="copyable">http://192.168.31.71:8096/web/index.html#thinban/thinban</span><span class="ml10">jellyfin</span></li>
     </ul>
     <ul>
         <li>[未分类]</li>
